2002-11-16  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_kernel.c:
	* dae/opd_mapping.c:
	* dae/opd_proc.c:
	* daemon/opd_image.c:
	* daemon/opd_kernel.c:
	* libop++/op_mangling.h:
	* libutil++/cverb.h:
	* pp/opp_samples_files.cpp:
	* pp/samples_file.cpp: doxygen fix
	* doc/srcdoc/Doxyfile: bump to 0.5 cvs

2002-11-14  Will Cohen  <wcohen@redhat.com>

	* gui/Makefile.am: Use $(bindir).
	* oprof_report/Makefile.am: Use $(bindir).

2002-11-15  Dave Jones <davej@suse.de>

	* module/x86/cputype.c: Make the AMD case a bit simpler.

2002-11-14  John Levon  <levon@movementarian.org>

	* dae/Makefile.am:
	* daemon/Makefile.am: proper fix for c++ link
	  as suggested by Alexandre Duret-Lutz
 
2002-11-14  Philippe Elie  <phil.el@wanadoo.fr>

	* Makefile.am: we installed module in the wrong directory.

2002-11-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/op_file.c: op_simplify_path_name(): strip leading '/'
	* daemon/oprofiled.c:
	* dae/oprofiled.c: fix incorrect specification of vmlinux file
	  through --vmlinux=/foo//bar fixing #637805

2002-11-14  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/op_start_25: /dev/oprofile/kernel_only doesn't exists
	  in timer int mode. fix #637804

2002-11-14  John Levon  <levon@movementarian.org>

	* dae/*:
	* daemon/*:
	* libutil++/op_bfd.h:
	* pp/samples_container.cpp:
	* pp/samples_container.h: doxygen anality
 
2002-11-14  John Levon  <levon@movementarian.org>

	* libopt++/popt_options.h:
	* libopt++/popt_options.cpp: place in popt
	namespace to avoid clash with getopt.h

	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* pp/op_merge.cpp:
	* pp/op_time_options.cpp:
	* pp/op_to_source_options.cpp:
	* pp/oprofpp_options.cpp:
	* pp/session.cpp: fix for above
 
	* libabi/abi.cpp:
	* libabi/abi.h: g++ 3.2 fixes

	* libabi/op_import.cpp: uninline extract

	* dae/Makefile.am:
	* daemon/Makefile.am: fix c++ link hack for -Werror
 
2002-11-13  Graydon Hoare  <graydon@redhat.com>

	( this changeset is mostly Dave Jones' work )
