@@ -1,3 +1,8 @@
+2002-11-17  Graydon Hoare  <graydon@redhat.com>
+
+	* module/x86/op_apic.h:
+	* module/x86/op_apic.c: revert, use copy of kernel code.
+
 2002-11-16  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* dae/opd_kernel.c:
